--- a/tensorflow/python/kernel_tests/proto/BUILD
+++ b/tensorflow/python/kernel_tests/proto/BUILD
@@ -6,6 +6,8 @@ load("//tensorflow:tensorflow.bzl", "tf_cc_shared_object")
 load("//tensorflow:tensorflow.default.bzl", "tf_py_strict_test")
 load("//tensorflow/core/platform:build_config_root.bzl", "if_static")
 load("//tensorflow/core/platform:build_config.bzl", "tf_additional_all_protos", "tf_proto_library")
+load("//rules_pywrap:pywrap.bzl", "stripped_cc_info")
+load("//tensorflow:tensorflow.bzl", "if_oss")
 
 package(
     # copybara:uncomment default_applicable_licenses = ["//tensorflow:license"],
@@ -21,10 +23,7 @@ tf_py_strict_test(
     name = "decode_proto_op_test",
     size = "small",
     srcs = ["decode_proto_op_test.py"],
-    data = if_static(
-        [],
-        otherwise = [":libtestexample.so"],
-    ),
+    data = if_oss([":libtestexample.so"]),
     python_version = "PY3",
     tags = [
         "no_pip",  # TODO(b/78026780)
@@ -42,10 +41,7 @@ tf_py_strict_test(
     name = "encode_proto_op_test",
     size = "small",
     srcs = ["encode_proto_op_test.py"],
-    data = if_static(
-        [],
-        otherwise = [":libtestexample.so"],
-    ),
+    data = if_oss([":libtestexample.so"]),
     python_version = "PY3",
     tags = [
         "no_pip",  # TODO(b/78026780)
@@ -112,15 +108,22 @@ tf_proto_library(
     name = "test_example_proto",
     srcs = ["test_example.proto"],
     cc_api_version = 2,
-    protodeps = tf_additional_all_protos(),
+    protodeps = ["//tensorflow/core/framework:types_proto"],
 )
 
 tf_cc_shared_object(
     name = "libtestexample.so",
     linkstatic = 1,
     deps = [
-        ":test_example_proto_cc",
+        "//tensorflow/python:_pywrap_tensorflow_common",
+        ":test_example_proto_cc_stripped",
+#        ":test_example_proto_cc",
     ],
+)
+
+stripped_cc_info(
+    name = "test_example_proto_cc_stripped",
+    deps = ["test_example_proto_cc"],
 )
 
 py_strict_library(
